--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ click==8.0.4
 distlib==0.3.6
 filelock==3.8.0
 Flask==2.2.2
+Flask-Cors==3.0.10
 flask-marshmallow==0.14.0
 Flask-Migrate==3.1.0
+Flask-MySQLdb==1.0.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.3
 identify==2.5.5
@@ -17,6 +19,7 @@ Mako==1.2.2
 MarkupSafe==2.1.1
 marshmallow==3.17.1
 marshmallow-sqlalchemy==0.28.1
+mysqlclient==2.1.1
 nodeenv==1.7.0
 packaging==21.3
 platformdirs==2.5.2
