feat: add picture and price to product model

--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ python-dotenv==0.21.0
 PyYAML==6.0
 six==1.16.0
 SQLAlchemy==1.4.40
+SQLAlchemy-Utils==0.38.3
 toml==0.10.2
 virtualenv==20.16.4
 Werkzeug==2.2.2
