--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 alembic==1.8.1
+certifi==2022.9.24
 cfgv==3.3.1
+charset-normalizer==2.1.1
 click==8.0.4
 distlib==0.3.6
+factory-boy==3.2.1
+Faker==15.1.1
 filelock==3.8.0
 Flask==2.2.2
 Flask-Cors==3.0.10
@@ -11,6 +15,7 @@ Flask-MySQLdb==1.0.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.3
 identify==2.5.5
+idna==3.4
 importlib-metadata==4.12.0
 importlib-resources==5.9.0
 itsdangerous==2.1.2
@@ -25,12 +30,15 @@ packaging==21.3
 platformdirs==2.5.2
 pre-commit==2.20.0
 pyparsing==3.0.9
+python-dateutil==2.8.2
 python-dotenv==0.21.0
 PyYAML==6.0
+requests==2.28.1
 six==1.16.0
 SQLAlchemy==1.4.40
 SQLAlchemy-Utils==0.38.3
 toml==0.10.2
+urllib3==1.26.12
 virtualenv==20.16.4
 Werkzeug==2.2.2
 zipp==3.8.1
